[package]
name = "retros-sdk-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Attribute macros for the RetrOS Rust SDK."

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
